<resources>
    <string name="app_name">Dice Job Searcher</string>
    <string name="job_title">Job Title:</string>
    <string name="company">Company:</string>
    <string name="location">Location:</string>
    <string name="posting_date">Posting Date:</string>
    <string name="hint_company">company</string>
    <string name="job_location">job location</string>
    <string name="prev_page">Prev Page</string>
    <string name="next_page">Next Page</string>
    <string name="textSkillTitle">Skill/Title:</string>
    <string name="text_SkillTitle">   Skill/title   </string>
    <string name="SearchesEntireJobAd">Searches entire job ad</string>
    <string name="JobText">     JobText     </string>
    <string name="Location1">Location: City/State or ZipCode</string>
    <string name="Location2_hint">     Location    </string>
    <string name="MaxAgeOfJobPosting">Max age of job posting (in days)</string>
    <string name="MaxAgeOfJobPosting_Hint">Max Age (in days)</string>
    <string name="jobEntryNoLongerExists">Job entry no longer exists on site.</string>
    <string name="menu_EditSearches">Edit Searches</string>
    <string name="menu_AddToSaved">Add to Saved</string>
    <string name="menu_ShareText">Text</string>
    <string name="menu_ShareEmail">Email</string>
    <string name="noInternetConnection_msg">No internet connection.</string>
    <string name="noRecordsFound_msg">No records are found for query.</string>
    <string name="noRecordstoDisplayforQuery">No records to display for query.</string>
</resources>
