<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            style="@style/TextTheme"
            android:layout_height="wrap_content"
            android:text="@string/textSkillTitle" />

        <EditText
            style="@style/EditTextTheme"
            android:inputType="text"
            android:id="@+id/editText_edit_search_skill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/text_SkillTitle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            style="@style/TextTheme"
            android:layout_height="wrap_content"
            android:text="@string/SearchesEntireJobAd" />

        <EditText
            style="@style/EditTextTheme"
            android:inputType="text"
            android:id="@+id/editText_edit_search_jobText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/JobText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            style="@style/TextTheme"
            android:layout_height="wrap_content"
            android:text="@string/Location1" />

        <EditText
            style="@style/EditTextTheme"
            android:inputType="text"
            android:id="@+id/editText_edit_search_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Location2_hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            style="@style/TextTheme"
            android:layout_height="wrap_content"
            android:text="@string/MaxAgeOfJobPosting" />

        <EditText
            style="@style/EditTextTheme"
            android:inputType="number"
            android:id="@+id/editText_edit_search_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/MaxAgeOfJobPosting_Hint" />
    </LinearLayout>
</LinearLayout>